ingress/traefik/argocd-webhook-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-webhook-backend
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/service.serverstransport: argocd-webhook@file
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
    - name: https
      port: 443
      targetPort: 8080
      protocol: TCP
